# game-of-life

./: CMakeLists.txt
docs/: LICENSE.md  README.md
include/: life.hpp
src/: life.cpp  main.cpp
